9th commit, moved file-parsing method to abstract class Document